# PlanningSolver

./: .gitignore  README.md  prompt_chat_GPT.txt  pyproject.toml
prolog_implementation/: planning_definition.pl  simple_pb_example.pl
python_implementation/: model.py  planning_definition.py
python_implementation/genetic_algorithm/: festanche_2024.py  genetic_algorithm.py  model.py  prompt_chat_GPT.txt  simple_pb_example.py
python_implementation/python_constraints/: simple_pb_example.py
