[tool.poetry]
name = "PlanningSolver"
version = "0.1"
description = "Constraints solving tool to establish a planning."
authors = ["Teazane"]

[tool.poetry.dependencies]
python = "^3.9"
python-constraint = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
